Fix for slideout visiblity issue that affected older Firefoxes and Safari browsers

--- a/html/css/panel.css
+++ b/html/css/panel.css
@@ -16,6 +16,7 @@
   
   padding-top: 45px;
   padding-bottom: 39px;
+  z-index: 10;
 }
 
 .panel-header,
